# secure-python-container

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: build.yaml
secure_python/: hello.py
