[project]
name = "secure-python"
version = "0.1.0"
description = "POC for building more secure Python containers"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "scikit-learn",
    "lightgbm",
    "xgboost",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
